--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.thymeleaf.prefix=classpath:/templates/
+##spring.thymeleaf.prefix=classpath:/templates/
+server.port=8888
+
+serverConfig.port = 9999
+
+serverConfig.dir = d:/test
